--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@ main,
   height: 100%;
   cursor: default;
   overflow: hidden;
+  font-size: 12px;
   font-family: "M PLUS 1 Code Variable", sans-serif;
 }
 
